force-app/main/default/objects/QuoteManagement__c/QuoteManagement__c.object-meta.xml
<CustomObject>
    <description>Oggetto standard utilizzato per tutti i processi di post Sales.</description>
    <label>Quote Management</label>
    <nameField>
        <label>Quote Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotes Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>