force-app/main/default/objects/QuoteManagement__c/fields/AdegPotDisp__c.field-meta.xml
<CustomField>
    <fullName>AdegPotDisp__c</fullName>
    <description>Adeg pot disponibile</description>
    <label>Adeg pot disponibile</label>
    <length>1</length>
    <type>Text</type>
</CustomField>