force-app/main/default/objects/QuoteManagement__c/fields/GdmMovement__c.field-meta.xml
<CustomField>
    <fullName>GdmMovement__c</fullName>
    <description>Spostamento GdM</description>
    <label>Spostamento GdM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>