force-app/main/default/objects/QuoteManagement__c/fields/Operation_type__c.field-meta.xml
<CustomField>
    <fullName>Operation_type__c</fullName>
    <description>Tipo operazione</description>
    <label>Operation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>