force-app/main/default/objects/QuoteManagement__c/fields/OperationCode__c.field-meta.xml
<CustomField>
    <fullName>OperationCode__c</fullName>
    <label>Codice Prestazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>