force-app/main/default/objects/QuoteManagement__c/fields/PhaseVoltage__c.field-meta.xml
<CustomField>
    <fullName>PhaseVoltage__c</fullName>
    <description>Tensione fase</description>
    <label>Tensione Fase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>