force-app/main/default/objects/QuoteManagement__c/fields/PowerEngaged__c.field-meta.xml
<CustomField>
    <fullName>PowerEngaged__c</fullName>
    <description>Potenza impegnata</description>
    <label>Potenza Impegnata</label>
    <length>255</length>
    <type>Text</type>
</CustomField>