force-app/main/default/objects/QuoteManagement__c/fields/PowerRequired__c.field-meta.xml
<CustomField>
    <fullName>PowerRequired__c</fullName>
    <description>Potenza richiesta</description>
    <label>Potenza Richiesta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>