force-app/main/default/objects/QuoteManagement__c/fields/QuoteType__c.field-meta.xml
<CustomField>
    <fullName>QuoteType__c</fullName>
    <description>Tipo preventivo</description>
    <label>Quote type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>