force-app/main/default/objects/QuoteManagement__c/fields/Subprocess__c.field-meta.xml
<CustomField>
    <fullName>Subprocess__c</fullName>
    <description>Sottoprocesso</description>
    <label>Sottoprocesso</label>
    <length>50</length>
    <type>Text</type>
</CustomField>