force-app/main/default/objects/QuoteManagement__c/fields/VendDist__c.field-meta.xml
<CustomField>
    <fullName>VendDist__c</fullName>
    <description>Vend Dist</description>
    <label>Vend Dist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>