force-app/main/default/objects/QuoteManagement__c/fields/VoltageRequired__c.field-meta.xml
<CustomField>
    <fullName>VoltageRequired__c</fullName>
    <description>Tensione richiesta</description>
    <label>Tensione Richiesta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>